--- a/digital_clock/index.html
+++ b/digital_clock/index.html
@@ -6,13 +6,28 @@
 </head>
 <body>
     <div id="time">
-        <div class="circle">
+        <div class="circle" style="--clr:#ff2972;">
+            <div class="dots hh_dot"></div>
+            <svg>
+                <circle cx="70" cy="70" r="70"></circle>
+                <circle cx="70" cy="70" r="70" id="hh"></circle>
+            </svg>
             <div id="hours">00</div>
         </div>
-        <div class="circle">
+        <div class="circle" style="--clr:#fee800;">
+            <div class="dots mm_dot"></div>
+            <svg>
+                <circle cx="70" cy="70" r="70"></circle>
+                <circle cx="70" cy="70" r="70" id="mm"></circle>
+            </svg>
             <div id="minutes">00</div>
         </div>
-        <div class="circle">
+        <div class="circle" style="--clr:#04fc43;">
+            <div class="dots ss_dot"></div>
+            <svg>
+                <circle cx="70" cy="70" r="70"></circle>
+                <circle cx="70" cy="70" r="70" id="ss"></circle>
+            </svg>
             <div id="seconds">00</div>
         </div>
         <div class="ap">
@@ -26,23 +41,40 @@
             let seconds = document.getElementById('seconds');
             let ampm = document.getElementById('ampm');
 
+            let hh = document.getElementById('hh');
+            let mm = document.getElementById('mm');
+            let ss = document.getElementById('ss');
+
+            let hh_dot = document.querySelector('.hh_dot');
+            let mm_dot = document.querySelector('.mm_dot');
+            let ss_dot = document.querySelector('.ss_dot');
+
             let h = new Date().getHours();
             let m = new Date().getMinutes();
             let s = new Date().getSeconds();
-            let am_pm = h >= 12 ? "PM" : "AM";
+            
+            let am_pm = h > 12 ? "PM" : "AM";
 
             if (h > 12){
                 h = h - 12;
             }
-            
+
             h = (h < 10) ? "0" + h : h;
             m = (m < 10) ? "0" + m : m;
             s = (s < 10) ? "0" + s : s;
 
-            hours.innerHTML = h;
-            minutes.innerHTML = m;
-            seconds.innerHTML = s;
+            hours.innerHTML = h + "<br><span>hours</span>";
+            minutes.innerHTML = m + "<br><span>minutes</span>";
+            seconds.innerHTML = s + "<br><span>seconds</span>";
             ampm.innerHTML = am_pm;
+
+            hh.style.strokeDashoffset = 440 - (440 * h) / 12;
+            mm.style.strokeDashoffset = 440 - (440 * m) / 60;
+            ss.style.strokeDashoffset = 440 - (440 * s) / 60;
+
+            hh_dot.style.transform = `rotate(${h * 30}deg)`;
+            mm_dot.style.transform = `rotate(${m * 6}deg)`;
+            ss_dot.style.transform = `rotate(${s * 6}deg)`;
         })
     </script>
 </body>
