--- a/contacts/index.html
+++ b/contacts/index.html
@@ -5,36 +5,185 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="icon">
-            <div class="imgBx active" style="--i:1">
+            <div class="imgBx active" style="--i:1" data-id="content1">
                 <img src="images/img1.jpg" alt="">
             </div>
-            <div class="imgBx" style="--i:2">
+            <div class="imgBx" style="--i:2" data-id="content2">
                 <img src="images/img2.jpg" alt="">
             </div>
-            <div class="imgBx" style="--i:3">
+            <div class="imgBx" style="--i:3" data-id="content3">
                 <img src="images/img3.jpg" alt="">
             </div>
-            <div class="imgBx" style="--i:4">
+            <div class="imgBx" style="--i:4" data-id="content4">
                 <img src="images/img4.jpg" alt="">
             </div>
-            <div class="imgBx" style="--i:5">
+            <div class="imgBx" style="--i:5" data-id="content5">
                 <img src="images/img5.jpg" alt="">
             </div>
-            <div class="imgBx" style="--i:6">
+            <div class="imgBx" style="--i:6" data-id="content6">
                 <img src="images/img6.jpg" alt="">
             </div>
-            <div class="imgBx" style="--i:7">
+            <div class="imgBx" style="--i:7" data-id="content7">
                 <img src="images/img7.jpg" alt="">
             </div>
-            <div class="imgBx" style="--i:8">
+            <div class="imgBx" style="--i:8" data-id="content8">
                 <img src="images/img8.jpg" alt="">
             </div>
         </div>
+        <dic class="content">
+            <div class="contentBx active" id="content1">
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="images/img1.jpg" alt="">
+                    </div>
+                    <div class="textBx">
+                        <h2>Some Famous<br><span>Product designer</span></be></h2>
+                        <ul class="sci">
+                            <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="contentBx" id="content2">
+                    <div class="card">
+                        <div class="imgBx">
+                            <img src="images/img2.jpg" alt="">
+                        </div>
+                        <div class="textBx">
+                            <h2>Some Famous<br><span>Product designer</span></be></h2>
+                            <ul class="sci">
+                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="contentBx" id="content3">
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="images/img3.jpg" alt="">
+                    </div>
+                    <div class="textBx">
+                        <h2>Some Famous<br><span>Product designer</span></be></h2>
+                        <ul class="sci">
+                            <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="contentBx" id="content4">
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="images/img4.jpg" alt="">
+                    </div>
+                    <div class="textBx">
+                        <h2>Some Famous<br><span>Product designer</span></be></h2>
+                        <ul class="sci">
+                            <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="contentBx" id="content5">
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="images/img5.jpg" alt="">
+                    </div>
+                    <div class="textBx">
+                        <h2>Some Famous<br><span>Product designer</span></be></h2>
+                        <ul class="sci">
+                            <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="contentBx" id="content6">
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="images/img6.jpg" alt="">
+                    </div>
+                    <div class="textBx">
+                        <h2>Some Famous<br><span>Product designer</span></be></h2>
+                        <ul class="sci">
+                            <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="contentBx" id="content7">
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="images/img7.jpg" alt="">
+                    </div>
+                    <div class="textBx">
+                        <h2>Some Famous<br><span>Product designer</span></be></h2>
+                        <ul class="sci">
+                            <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="contentBx" id="content8">
+                <div class="card">
+                    <div class="imgBx">
+                        <img src="images/img8.jpg" alt="">
+                    </div>
+                    <div class="textBx">
+                        <h2>Some Famous<br><span>Product designer</span></be></h2>
+                        <ul class="sci">
+                            <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </dic>
     </div>
+    <script>
+        let imgBx = document.querySelectorAll('.imgBx');
+        let contentBx = document.querySelectorAll('.contentBx');
+
+        for(let i=0; i<imgBx.length; i++){
+            imgBx[i].addEventListener('mouseover',function(){
+                for(let i=0; i<contentBx.length; i++){
+                    contentBx[i].className = 'contentBx';
+                }
+                document.getElementById(this.dataset.id).className = 'contentBx active';
+                for(let i=0; i<imgBx.length; i++){
+                    imgBx[i].className = 'imgBx';
+                }
+            this.className = 'imgBx active';
+            })
+        }
+    </script>
 </body>
 </html>
