--- a/services/index.html
+++ b/services/index.html
@@ -14,7 +14,39 @@
             <div class="imgBx">
                  <img src="images/design.png" alt="">
             </div>
-            <div class="content"></div>
+            <div class="content">
+                <div class="details">
+                    <h2>Design</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat temporibus dolorum quo molestias sunt ullam?</p>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="lines"></div>
+            <div class="imgBx">
+                 <img src="images/code.png" alt="">
+            </div>
+            <div class="content">
+                <div class="details">
+                    <h2>Development</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat temporibus dolorum quo molestias sunt ullam?</p>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="lines"></div>
+            <div class="imgBx">
+                 <img src="images/launch.png" alt="">
+            </div>
+            <div class="content">
+                <div class="details">
+                    <h2>Launch</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat temporibus dolorum quo molestias sunt ullam?</p>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
